fix: Refactor Lamaran and LamaranController for improved exception handling and code clarity